<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/message"
            android:icon="@drawable/mail"
            android:title="@string/msg"
            />
        <item android:id="@+id/chat"
            android:icon="@drawable/massage"
            android:title="@string/chat"
            />
        <item android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item android:id="@+id/send"
                android:icon="@drawable/send"
                android:title="@string/Send"
                />
            <item android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="@string/share"
                />

        </menu>




    </item>

</menu>